# htvm

./: .gitignore  ChangeLog.md  LOG.md  README.md  buildtvm.sh  default.nix  htvm.cabal
app/demo/: MNIST.hs  Main.hs
app/demo/Graphics/: TinyPlot.hs
src/: Demo.hs  HTVM.hs
src/HTVM/: EDSL.hs  IR.hs  Prelude.hs  Runtime.hs  TVMRuntime.hs  Types.hs
src/HTVM/EDSL/: Build.hs  Monad.hs  Printer.hs  Types.hs
src/HTVM/IR/: Types.hs
src/HTVM/Runtime/: FFI.chs  TVMData.hs
src/HTVM/TVMRuntime/: Build.hs  FFI.chs  PrinterCPP.hs  TVMData.hs  Types.hs
test/: Main.hs
