name:                htvm
version:             0.1.0.0
license:             GPL-3
license-file:        LICENSE
author:              Sergey Mironov
maintainer:          grrwlf@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  build-depends:
      base >=4.11 && <4.12
    , Earley
    , pretty-show
    , recursion-schemes
    , containers
    , unordered-containers
    , deriving-compat
    , mtl
    , text
    , pretty-show
    , process
    , filepath
  hs-source-dirs:
      src
  default-language:
      Haskell2010
  ghc-options:
    -fwarn-incomplete-patterns
  exposed-modules:
      HTVM.EDSL.Types
    , HTVM.EDSL.Monad
    , HTVM.EDSL.Printer
    , HTVM.EDSL.Build
    , HTVM.EDSL
    , HTVM.IR.Types
    , HTVM.IR
    , HTVM
